// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action creators matches the last snapshot for addUserTyping 1`] = `
{
  "payload": {
    "id": "1",
    "name": "Proteus",
  },
  "type": "PeopleTyping/ADD_USER_TYPING",
}
`;

exports[`action creators matches the last snapshot for clearUserTyping 1`] = `
{
  "payload": {
    "id": "1",
  },
  "type": "PeopleTyping/CLEAR_USER_TYPING",
}
`;
